deploy: e00b0b092ce95b5c1cdf4511e39ff0e14de21eb3

--- a/index.html
+++ b/index.html
@@ -100,10 +100,6 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./FT_rapport.html"> 
 <span class="menu-text">Folketingsvalg</span></a>
   </li>  
-  <li class="nav-item compact">
-    <a class="nav-link" href="./render_ep_rapport.qmd"> 
-<span class="menu-text"></span></a>
-  </li>  
   <li class="nav-item dropdown ">
     <a class="nav-link dropdown-toggle" href="#" id="nav-menu-europaparlamentsvalg" role="link" data-bs-toggle="dropdown" aria-expanded="false">
  <span class="menu-text">Europaparlamentsvalg</span>
@@ -139,6 +135,10 @@ ul.task-list li input[type="checkbox"] {
         <li>
     <a class="dropdown-item" href="./fodbold_kalender/Tysk fodboldkort.html">
  <span class="dropdown-text">Tyskland</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./fodbold_kalender/Tysk fodboldkort_amateur.html">
+ <span class="dropdown-text">Tyskland Regionalliga</span></a>
   </li>  
         <li>
     <a class="dropdown-item" href="./fodbold_kalender/Dansk fodboldkort.html">
