--- a/mio6DK.html
+++ b/mio6DK.html
@@ -38,7 +38,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-d4d76bf8491c20bad77d141916dc28e1.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-8647a4a42273f773479d27c00df3f9ed.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-12858c9ce0885248945210bbd3c85d1a.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -67,10 +67,10 @@ ul.task-list li input[type="checkbox"] {
   }
 }</script>
 <link href="site_libs/htmltools-fill-0.5.8.1/fill.css" rel="stylesheet">
-<script src="site_libs/bslib-component-js-0.7.0/components.min.js"></script>
-<script src="site_libs/bslib-component-js-0.7.0/web-components.min.js" type="module"></script>
-<link href="site_libs/bslib-component-css-0.7.0/components.css" rel="stylesheet">
-<script src="site_libs/bslib-tag-require-0.7.0/tag-require.js"></script>
+<script src="site_libs/bslib-component-js-0.9.0/components.min.js"></script>
+<script src="site_libs/bslib-component-js-0.9.0/web-components.min.js" type="module"></script>
+<link href="site_libs/bslib-component-css-0.9.0/components.css" rel="stylesheet">
+<script src="site_libs/bslib-tag-require-0.9.0/tag-require.js"></script>
 
 
 <link rel="stylesheet" href="styles.css">
@@ -104,10 +104,6 @@ ul.task-list li input[type="checkbox"] {
   <li class="nav-item">
     <a class="nav-link" href="./FT_rapport.html"> 
 <span class="menu-text">Folketingsvalg</span></a>
-  </li>  
-  <li class="nav-item compact">
-    <a class="nav-link" href="./render_ep_rapport.qmd"> 
-<span class="menu-text"></span></a>
   </li>  
   <li class="nav-item dropdown ">
     <a class="nav-link dropdown-toggle" href="#" id="nav-menu-europaparlamentsvalg" role="link" data-bs-toggle="dropdown" aria-expanded="false">
@@ -144,6 +140,10 @@ ul.task-list li input[type="checkbox"] {
         <li>
     <a class="dropdown-item" href="./fodbold_kalender/Tysk fodboldkort.html">
  <span class="dropdown-text">Tyskland</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./fodbold_kalender/Tysk fodboldkort_amateur.html">
+ <span class="dropdown-text">Tyskland Regionalliga</span></a>
   </li>  
         <li>
     <a class="dropdown-item" href="./fodbold_kalender/Dansk fodboldkort.html">
@@ -208,7 +208,7 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
-<p><br> <em>Sidst opdateret: 22/04/2025 09:25:03</em></p>
+<p><br> <em>Sidst opdateret: 23/04/2025 09:28:12</em></p>
 
 
 
