deploy: 110bcc105164db755645d82eba116632d586f36b

--- a/mio6DK.html
+++ b/mio6DK.html
@@ -130,6 +130,10 @@ ul.task-list li input[type="checkbox"] {
     </ul>
   </li>
   <li class="nav-item">
+    <a class="nav-link" href="./komvalg_shiny.html"> 
+<span class="menu-text">Udregn KV/EP-valg</span></a>
+  </li>  
+  <li class="nav-item">
     <a class="nav-link active" href="./mio6DK.html" aria-current="page"> 
 <span class="menu-text">6 mio danskere</span></a>
   </li>  
@@ -209,7 +213,7 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
-<p><br> <em>Sidst opdateret: 30/07/2025 09:31:57</em></p>
+<p><br> <em>Sidst opdateret: 31/07/2025 09:31:00</em></p>
 
 
 
