--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@ ul.task-list li input[type="checkbox"] {
     </ul>
   </li>
   <li class="nav-item">
+    <a class="nav-link" href="./komvalg_shiny.html"> 
+<span class="menu-text">Udregn KV/EP-valg</span></a>
+  </li>  
+  <li class="nav-item">
     <a class="nav-link" href="./mio6DK.html"> 
 <span class="menu-text">6 mio danskere</span></a>
   </li>  
